@@ -1,5 +1,6 @@
 package uk.gov.hmcts.reform.prl.services.validators;
 
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.prl.enums.ProceedingsEnum;
@@ -12,7 +13,6 @@ import uk.gov.hmcts.reform.prl.services.TaskErrorService;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static uk.gov.hmcts.reform.prl.enums.Event.OTHER_PROCEEDINGS;
@@ -22,11 +22,10 @@ import static uk.gov.hmcts.reform.prl.enums.YesNoDontKnow.no;
 import static uk.gov.hmcts.reform.prl.enums.YesNoDontKnow.yes;
 
 @Service
+@RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class OtherProceedingsChecker implements EventChecker {
 
-    @Autowired
-    TaskErrorService taskErrorService;
-
+    private final TaskErrorService taskErrorService;
 
     @Override
     public boolean isFinished(CaseData caseData) {
@@ -46,7 +45,7 @@ public class OtherProceedingsChecker implements EventChecker {
             List<ProceedingDetails> allProceedings = proceedingDetails.get()
                 .stream()
                 .map(Element::getValue)
-                .collect(Collectors.toList());
+                .toList();
 
             //if a collection item is added and then removed the collection exists as length 0
             if (allProceedings.isEmpty()) {
